Fix cover alignment

--- a/packages/block-library/src/cover/style.scss
+++ b/packages/block-library/src/cover/style.scss
@@ -13,6 +13,11 @@
 	// This block has customizable padding, border-box makes that more predictable.
 	box-sizing: border-box;
 
+	.wp-block-cover__image-background {
+		width: inherit;
+		height: inherit;
+	}
+
 	&.has-parallax {
 		background-attachment: fixed;
 
